--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-	"name": "11ty-starter",
-	"version": "1.0.0",
-	"description": "A starter kit for 11ty that takes care of the faff for you.",
-	"main": "webpack.mix.js",
-	"scripts": {
-		"build": "npm-run-all mixBuild buildSite",
-		"buildSite": "npx @11ty/eleventy",
-		"dev": "npm-run-all --parallel serve mixDev watch",
-		"serve": "npx @11ty/eleventy --serve",
-		"serveStatic": "npx serve _site",
-		"watch": "npm run mixDev -- --watch",
-		"mixDev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"mixBuild": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"test": "npm-run-all --parallel serve testSite",
-		"testSite": "npx cypress open"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@11ty/eleventy": "^0.10.0",
-		"@11ty/eleventy-navigation": "^0.1.5",
-		"cross-env": "^7.0.2",
-		"cypress": "^3.8.0",
-		"gulp": "^4.0.2",
-		"gulp-autoprefixer": "^7.0.1",
-		"gulp-cssnano": "^2.1.3",
-		"gulp-postcss": "^8.0.0",
-		"laravel-mix": "^5.0.4",
-		"node-yaml": "^4.0.1",
-		"npm-run-all": "^4.1.5",
-		"tailwindcss": "^1.4.5"
-	}
+    "name": "11ty-starter",
+    "version": "1.0.0",
+    "description": "A starter kit for 11ty that takes care of the faff for you.",
+    "main": "webpack.mix.js",
+    "scripts": {
+        "build": "npm-run-all mixBuild buildSite",
+        "buildSite": "npx @11ty/eleventy",
+        "dev": "npm-run-all --parallel serve mixDev watch",
+        "serve": "npx @11ty/eleventy --serve",
+        "serveStatic": "npx serve _site",
+        "watch": "npm run mixDev -- --watch",
+        "mixDev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "mixBuild": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "test": "npm-run-all --parallel serve testSite",
+        "testSite": "npx cypress open"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@11ty/eleventy": "^0.10.0",
+        "@11ty/eleventy-navigation": "^0.1.5",
+        "cross-env": "^7.0.2",
+        "cypress": "^3.8.0",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^7.0.1",
+        "gulp-cssnano": "^2.1.3",
+        "gulp-postcss": "^8.0.0",
+        "laravel-mix": "^5.0.4",
+        "node-yaml": "^4.0.1",
+        "npm-run-all": "^4.1.5",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.26.9",
+        "sass-loader": "^8.0.2",
+        "underscores-css": "^0.1.6"
+    }
 }
