--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "devDependencies": {
         "@11ty/eleventy": "^0.10.0",
         "@11ty/eleventy-navigation": "^0.1.5",
+        "autoprefixer": "^9.8.4",
         "clean-css": "^4.2.3",
         "cypress": "^3.8.0",
-        "node-sass-promise": "^1.0.0",
         "node-yaml": "^4.0.1",
         "npm-run-all": "^4.1.5",
-        "sass": "^1.26.9",
-        "underscores-css": "^0.1.6"
+        "postcss": "^7.0.32",
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^1.4.6"
     }
 }
