--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 		"node-sass-promise": "^1.0.0",
 		"node-yaml": "^4.0.1",
 		"npm-run-all": "^4.1.5",
-		"sass": "^1.26.9",
-		"underscores-css": "^0.2.5"
+		"sass": "^1.26.9"
 	}
 }
