--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
 	"description": "A starter kit for 11ty that takes care of the faff for you.",
 	"main": ".eleventy.js",
 	"scripts": {
-		"build": "npx @11ty/eleventy",
-		"dev": "npm run serve",
-		"serve": "npx @11ty/eleventy --serve",
-		"serveStatic": "npx serve _site",
-		"test": "npm-run-all --parallel serve testSite",
-		"testSite": "npx cypress open"
+		"dev": "npm-run-all --parallel bundle:*",
+		"bundle:eleventy": "eleventy --serve",
+		"bundle:parcel": "parcel src/**/*.js src/**/*.scss",
+		"build": "run-s prod:*",
+		"prod:eleventy": "eleventy",
+		"prod:parcel": "parcel build src/**/*.js src/**/*.scss",
+		"test": "npm-run-all --parallel serve cypress",
+		"cypress": "npx cypress open"
 	},
 	"author": "Chris Galbraith",
 	"license": "MIT",
 	"devDependencies": {
 		"@11ty/eleventy": "^0.10.0",
 		"@11ty/eleventy-navigation": "^0.1.5",
-		"clean-css": "^4.2.3",
 		"cypress": "^3.8.0",
-		"node-sass-promise": "^1.0.0",
-		"node-yaml": "^4.0.1",
 		"npm-run-all": "^4.1.5",
-		"sass": "^1.26.9"
+		"parcel-bundler": "^1.12.4",
+		"sass": "^1.32.5"
 	}
 }
