--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@11ty/eleventy-img": "^0.7.8",
 		"@11ty/eleventy-navigation": "^0.1.5",
 		"cypress": "^3.8.0",
+		"eleventy-critical-css": "^0.2.2",
 		"kubas": "^0.3.0",
 		"npm-run-all": "^4.1.5"
 	}
