--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
 		"eleventy:build": "eleventy",
 		"test": "npm-run-all --parallel dev cypress",
 		"cypress": "npx cypress open",
-		"generate:tokens": "node_modules/kubas/kubas.js"
+		"generate:tokens": "npx kubas"
 	},
 	"author": "Chris Galbraith",
 	"license": "MIT",
 	"devDependencies": {
 		"@11ty/eleventy": "^0.11.0",
-		"@11ty/eleventy-img": "^0.7.8",
 		"@11ty/eleventy-navigation": "^0.1.5",
 		"cypress": "^3.8.0",
-		"eleventy-critical-css": "^0.2.2",
 		"kubas": "^0.3.0",
-		"npm-run-all": "^4.1.5"
+		"npm-run-all": "^4.1.5",
+		"postcss-cli": "^8.3.1",
+		"postcss-import": "^14.0.0",
+		"postcss-logical": "^4.0.2"
 	}
 }
