--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"npm-run-all": "^4.1.5",
 		"postcss-cli": "^8.3.1",
 		"postcss-import": "^14.0.0",
-		"postcss-logical": "^4.0.2"
+		"postcss-logical": "^4.0.2",
+		"postcss-nested": "^5.0.5"
 	}
 }
