--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"cypress": "^3.8.0",
 		"kubas": "^0.3.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.2.10",
 		"postcss-cli": "^8.3.1",
 		"postcss-import": "^14.0.0",
 		"postcss-logical": "^4.0.2",
